# mcnla

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
check/: CMakeLists.txt  check.cmake  check.cpp  check_mpi.cpp
check/core/matrix/dense/dense_cube/: _check.cpp  get_block.cpp  get_col.cpp  get_col_pages.cpp  get_col_segment.cpp  get_cols.cpp  get_diagonal.cpp  get_diagonal_bottom.cpp  get_diagonal_lower.cpp  get_diagonal_upper.cpp  get_page.cpp  get_pages.cpp  get_row.cpp  get_row_pages.cpp  get_row_segment.cpp  get_rows.cpp  get_subcube.cpp  get_tube.cpp  get_tube_segment.cpp  get_tubes.cpp  test.hpp  unfold.cpp  vectorize.cpp
check/core/matrix/dense/dense_cube/test/: _check.cpp  get_block.cpp  get_col.cpp  get_col_pages.cpp  get_col_segment.cpp  get_cols.cpp  get_diagonal.cpp  get_diagonal_bottom.cpp  get_diagonal_lower.cpp  get_diagonal_upper.cpp  get_page.cpp  get_pages.cpp  get_row.cpp  get_row_pages.cpp  get_row_segment.cpp  get_rows.cpp  get_subcube.cpp  get_tube.cpp  get_tube_segment.cpp  get_tubes.cpp  unfold.cpp  vectorize.cpp
check/core/matrix/dense/dense_matrix/: _check.cpp  death_test.hpp  get_block.cpp  get_col.cpp  get_col_segment.cpp  get_cols.cpp  get_diagonal.cpp  get_diagonal_bottom.cpp  get_diagonal_lower.cpp  get_diagonal_upper.cpp  get_row.cpp  get_row_segment.cpp  get_rows.cpp  test.hpp  vectorize.cpp
check/core/matrix/dense/dense_matrix/death_test/: _constructor.cpp
check/core/matrix/dense/dense_matrix/test/: _check.cpp  _constructor.cpp  get_block.cpp  get_col.cpp  get_col_segment.cpp  get_cols.cpp  get_diag.cpp  get_diag_bottom.cpp  get_diag_lower.cpp  get_diag_upper.cpp  get_diagonal.cpp  get_diagonal_bottom.cpp  get_diagonal_lower.cpp  get_diagonal_upper.cpp  get_row.cpp  get_row_segment.cpp  get_rows.cpp  vectorize.cpp
check/core/matrix/dense/dense_vector/: _check.cpp  death_test.hpp  get_segment.cpp  test.hpp
check/core/matrix/dense/dense_vector/death_test/: _constructor.cpp  const_method.cpp  non_const_method.cpp
check/core/matrix/dense/dense_vector/test/: _check.cpp  _constructor.cpp  _operator.cpp  get_segment.cpp
check/isvd/former/: col_block_gramian_former.cpp  gramian_former.cpp  polar_former.cpp  row_block_gramian_former.cpp  row_block_polar_former.cpp  row_block_symmetric_former.cpp  svd_former.cpp
check/isvd/integrator/: kolmogorov_nagumo_integrator.cpp  row_block_extrinsic_mean_integrator.cpp  row_block_fast_kolmogorov_nagumo_integrator.cpp  row_block_gramian_kolmogorov_nagumo_integrator.cpp  row_block_gramian_wen_yin_integrator.cpp  row_block_kolmogorov_nagumo_integrator.cpp  row_block_reduce_sum_integrator.cpp  row_block_reduction_integrator.cpp  row_block_wen_yin_integrator.cpp
check/isvd/integrator/extrinsic_mean_integrator/: test.cpp
check/isvd/integrator/kolmogorov_nagumo_integrator/: test.cpp
check/isvd/integrator/kolmogorov_nagumo_type_integrator/: test.cpp
check/isvd/integrator/naive_kolmogorov_nagumo_integrator/: test.cpp
check/isvd/integrator/reduction_integrator/: test.cpp
check/isvd/integrator/row_block_extrinsic_mean_integrator/: test.cpp
check/isvd/integrator/row_block_kolmogorov_nagumo_integrator/: test.cpp
check/isvd/orthogonalizer/: gramian_orthogonalizer.cpp  polar_orthogonalizer.cpp  qr_orthogonalizer.cpp  row_block_gramian_orthogonalizer.cpp  row_block_polar_orthogonalizer.cpp  svd_orthogonalizer.cpp
check/isvd/orthogonalizer/polar_orthogonalizer/: test.cpp
check/isvd/orthogonalizer/row_block_polar_orthogonalizer/: test.cpp
check/isvd/orthogonalizer/svd_orthogonalizer/: test.cpp
check/isvd/sketcher/: col_block_gaussian_projection_sketcher.cpp  column_sampling_sketcher.cpp  gaussian_projection_sketcher.cpp  row_block_column_sampling_sketcher.cpp  row_block_gaussian_projection_sketcher.cpp
check/isvd_gpu/former/: col_block_gramian_former_gpu.cpp  row_block_gramian_former_gpu.cpp  row_block_symmetric_former_gpu.cpp
check/isvd_gpu/sketcher/: col_block_gaussian_projection_sketcher_gpu.cpp  row_block_gaussian_projection_sketcher_gpu.cpp
cmake/: CMakeLists.txt  configure.cmake  display.cmake  flags.cmake  functions.cmake  install.cmake  options.cmake  packages.cmake
cmake/modules/: FindGTest.cmake  FindGTest_.cmake  FindMAGMA.cmake  FindMKL.cmake  FindOpenMPLib.cmake
data/: a.mtx  a_sym.mtx  q.mtx  qb_em.mtx  qb_kn.mtx  qb_re.mtx  qb_rs.mtx  qb_wy.mtx  qbt.mtx  qbt_em.mtx  qbt_kn.mtx  qbt_re.mtx  qct.mtx  qi.mtx  qit.mtx  u.mtx  u_kn.mtx  u_sym.mtx  yi.mtx  yit.mtx
demo/: CMakeLists.txt  demo.cpp  demo1.cpp  demo2.cpp  demo_kn.cpp  demo_kn0.cpp  demo_plain.cpp  example.cpp  isvd.cpp  isvd_driver.cpp  isvd_plain.cpp  statistics_set.hpp  test.cpp  test.mtx
doxygen/: CMakeLists.txt  Doxyfile.in  index.md  layout.xml  style.css
doxygen/page/: index.md
doxygen/tutorial/: container_creation.dox  container_usage.dox  data_structure.dox  io.dox  isvd.dox  la.dox  linear_algebra.dox  literal.dox  main.dox  matrix.dox
doxygen/tutorial/io/: binary.dox
doxygen/tutorial/isvd/: example.dox  isvd.dox  stage.dox  storage.dox
doxygen/tutorial/la/: blas.dox
doxygen/tutorial/matrix/: creation.dox  data_structure.dox  literal.dox  usage.dox
include/: CMakeLists.txt  isvd.hpp  mcnla.hpp
include/isvd/: blas.hpp  config.hpp.in  core.hpp  isvd.hpp  isvd.hpp.in  lapack.hpp  matrix.hpp  operation.hpp  utility.hpp
include/isvd/blas/: blas.hpp  blasf.hpp  dense_copy.hpp  driver.hpp  (+5 more)
include/mcnla/: blas.hpp  config.hpp  config.hpp.in  core.hpp  core_gpu.hpp  def.hpp  isvd.hpp  isvd_gpu.hpp  lapack.hpp  matrix.hpp  mcnla.hpp  utility.hpp
lib/pkgconfig/: mcnla.pc.in
report/: CMakeLists.txt  report.cmake  stage.hpp
report/include/: integrator.hpp  naive_integrator.hpp  row_block_integrator.hpp  stage.hpp
report/integrator/: kolmogorov_nagumo_integrator.cpp  row_block_kolmogorov_nagumo_integrator.cpp
report/script/: integrator.sh.in  sketcher.sh.in
share/mcnla/: mcnla-config-version.cmake.in  mcnla-config.cmake.in
src/: CMakeLists.txt  bin2bin.cpp  isvd.cpp  isvd_dense.cpp  isvd_dense_cb.cpp  isvd_dense_cb_gpu.cpp  isvd_dense_rb.cpp  isvd_dense_rb_gpu.cpp  mtx2bin.cpp
(+1147 files in other folders)
